@startuml

title __LEGENDARY's Class Diagram__\n

  namespace gamesource {
    namespace battleState.equipment {
      namespace legendary {
        class gamesource.battleState.equipment.legendary.BalancedLibra {
            - work : boolean
            + BalancedLibra()
            + fun()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.equipment {
      namespace legendary {
        class gamesource.battleState.equipment.legendary.ChunGeAmor {
            + ChunGeAmor()
            + fun()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.equipment {
      namespace legendary {
        class gamesource.battleState.equipment.legendary.CurseChest {
            + CurseChest()
            + fun()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.equipment {
      namespace legendary {
        class gamesource.battleState.equipment.legendary.MedusaEyeMask {
            + MedusaEyeMask()
            + fun()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.equipment {
      namespace legendary {
        class gamesource.battleState.equipment.legendary.MerlinGown {
            + MerlinGown()
            + fun()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.equipment {
      namespace legendary {
        class gamesource.battleState.equipment.legendary.MerlinShoes {
            + MerlinShoes()
            + fun()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.equipment {
      namespace legendary {
        class gamesource.battleState.equipment.legendary.MerlinWand {
            + MerlinWand()
            + fun()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.equipment {
      namespace legendary {
        class gamesource.battleState.equipment.legendary.TheMythOfPride {
            + TheMythOfPride()
            + fun()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.equipment {
      namespace legendary {
        class gamesource.battleState.equipment.legendary.ThePiccoloOfTheDarkElves {
            + ThePiccoloOfTheDarkElves()
            + fun()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.equipment {
      namespace legendary {
        class gamesource.battleState.equipment.legendary.Tights {
            + Tights()
            + fun()
        }
      }
    }
  }
  

  gamesource.battleState.equipment.legendary.BalancedLibra -up-|> gamesource.battleState.equipment.Equipment
  gamesource.battleState.equipment.legendary.ChunGeAmor -up-|> gamesource.battleState.equipment.Equipment
  gamesource.battleState.equipment.legendary.CurseChest -up-|> gamesource.battleState.equipment.Equipment
  gamesource.battleState.equipment.legendary.MedusaEyeMask -up-|> gamesource.battleState.equipment.Equipment
  gamesource.battleState.equipment.legendary.MerlinGown -up-|> gamesource.battleState.equipment.Equipment
  gamesource.battleState.equipment.legendary.MerlinShoes -up-|> gamesource.battleState.equipment.Equipment
  gamesource.battleState.equipment.legendary.MerlinWand -up-|> gamesource.battleState.equipment.Equipment
  gamesource.battleState.equipment.legendary.TheMythOfPride -up-|> gamesource.battleState.equipment.Equipment
  gamesource.battleState.equipment.legendary.ThePiccoloOfTheDarkElves -up-|> gamesource.battleState.equipment.Equipment
  gamesource.battleState.equipment.legendary.Tights -up-|> gamesource.battleState.equipment.Equipment



@enduml
